# MomijiHarvester

./: .clinerules  .gitignore  .pre-commit-config.yaml  README.md  TODO.md  config.yaml  mypy.ini  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
docs/: USAGE.md  design.md
docs/syllabusHtml/: 2025_AA.html  2025_AA_10000100.html  index.html
schema/: SUBJECT_SCHEMA.md  subject.schema.json
scripts/: bootstrap-dev.sh  generate_subject_schema.py  validate_json_no_nulls.py
src/: cli.py  config.py  converter.py  extractor.py  extractors.py  harvester.py  main.py  models.py  settings.py
tests/: conftest.py  test_converter.py  test_extractor.py  test_extractors.py  test_harvester.py  test_main.py  test_models.py
tests/fixtures/html/small/: 2025_AA.html  2025_AA_10000100.html  index.html
