[project]
name = "MomijiHarvester"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = ["pydantic>=2.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff", "mypy>=1.0"]
perf = ["numba"]
docs = ["sphinx"]

[project.scripts]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "PL"]

[tool.mypy]
strict = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --import-mode=importlib"

[tool.uv.sources]
