[project]
name = "MomijiHarvester"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    "pydantic>=2.0",
    "pandas",
    "beautifulsoup4",
    "requests",
    "html5lib",
    "typer[all]>=0.9.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff", "mypy>=1.0", "types-requests"]
perf = ["numba"]
docs = ["sphinx"]

[project.scripts]
momijiharvester = "momijiharvester.cli:app"

[tool.ruff]
line-length = 119

[tool.ruff.lint]
# See https://docs.astral.sh/ruff/rules/
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "PL",  # Pylint
    "T20", # flake8-print
    "TID", # flake8-tidy-imports
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "PTH", # flake8-use-pathlib
    "RUF", # Ruff-specific rules
]
ignore = ["E501"] # line-length is handled by the formatter
extend-ignore = ["RUF001", "RUF002", "RUF003"]  # Allow full-width characters in Japanese strings (allowed in this project)

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.mypy]
strict = true

[tool.black]
line-length = 119

[tool.isort]
profile = "black"
line_length = 119

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --import-mode=importlib"
pythonpath = [".", "src"]

[tool.uv.sources]
